@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.5 2004/02/12 16:19:58 minskim Exp $
+# $NetBSD: Makefile,v 1.6 2004/04/10 08:58:45 minskim Exp $
 
-DISTNAME=	libxml2-2.6.5
+DISTNAME=	libxml2-2.6.8
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libxml2/2.6/}
@@ -12,6 +12,7 @@ COMMENT=	Python wrapper for libxml2
 
 WRKSRC=		${WRKDIR}/${DISTNAME}/python
 PYDISTUTILSPKG=	YES
+PYBINMODULE=	YES
 USE_BUILDLINK3=	YES
 NO_CONFIGURE=	YES
 
@@ -19,7 +20,8 @@ SUBST_CLASSES+=		setup
 SUBST_MESSAGE.setup=	"Fixing hardcoded paths."
 SUBST_STAGE.setup=	pre-build
 SUBST_FILES.setup=	setup.py
-SUBST_SED.setup=	-e "s,'/usr','${BUILDLINK_PREFIX.libxml2}',g"
+SUBST_SED.setup=	-e "/ROOT/s,'/usr','${BUILDLINK_PREFIX.libxml2}',g" \
+			-e "/^\"/s,/usr/include,${BUILDLINK_PREFIX.iconv}/include,g"
 
 BUILDLINK_DEPENDS.libxml2+=	libxml2>=${PKGVERSION}
 .include "../../textproc/libxml2/buildlink3.mk"
